[package]
name = "blahaj"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-signal = { version = "0.1", features = ["derive"] }
actix-web = "4.0.0-beta.14"
awc = "3.0.0-beta.13"
futures = "0.3"
humantime-serde = "1.0"
log = "0.4"
nix = "0.23"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
shlex = "1.1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
thiserror = "1.0"
tokio = { version = "1", features = ["process", "macros"] }
tokio-util = { version = "0.6", features = ["codec"] }
