[package]
name = "blahaj"
version = "0.1.0"
edition = "2021"
description = "A BLÅHAJ runs in a docker, supervises your processes, and handles reverse proxies for you."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-signal = { version = "0.1", features = ["derive"] }
actix-web = "4.0.0-beta.19"
ansi_term = "0.12"
awc = { version = "3.0.0-beta.18", features = ["rustls"] }
clap = { version = "3.0", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
flexi_logger = "0.22"
futures = "0.3"
humantime-serde = "1.0"
log = "0.4"
nix = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde-with-expand-env = "1.1"
serde_json = "1.0"
serde_yaml = "0.8"
shellexpand = "2.1"
shlex = "1.1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["process", "macros"] }
tokio-util = { version = "0.6", features = ["codec"] }

[dev-dependencies]
maplit = "1.0"
